--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,22 @@
 .titleArea{
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    color: blue;
-    border: 2px solid black;
+}
+
+#titleText{
+    margin: 0px;
+    padding: 5px;
+    font-size: 52px;
+}
+
+.buttonLink{
+    padding: 22px;
+    margin: 5px;
+}
+
+.redirectSelectionArea{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
